@@ -89,6 +89,8 @@ OPTIMIZATIONS
  
 BUG FIXES
 
+PIG-3740: Document direct fetch optimization (lbendig via cheolsoo)
+
 PIG-3746: NPE is thrown if Pig fails before PigStats is intialized (cheolsoo)
 
 PIG-3747: Update skewed join documentation (cheolsoo)
